@@ -5,6 +5,7 @@ Changelog
 2018.5.0 (unreleased)
 ---------------------
 
+- Escape description of document_added description object. [elioschmutz]
 - Use plone.protect class of confirm-action view. [elioschmutz]
 - Assign correct roles in development content. [deiferni]
 - Place successor proposal button next to workflow buttons. [Kevin Bieri]
